--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
 
 <head>
     <title>Js practice</title>
+    <script src="/js/myJavascript.js"></script>
+    <script src="/js/Firstfunction.js"></script>
+    <script src="/js/objectValue.js"></script>
+    <script src="exampleFunction.js"></script>
 </head>
 
 <body>
-    <p>javaScript practice</p>
+    <p id="id1">javaScript practice</p>
+    <p id="display">Waiting for change this tag</p>
+    <p id="parameter">Waiting for change this tag</p>
+    <p id="id1">Waiting for change this tag</p>
+    <button onclick="Firstfunction()">click for change content</button>
+    <button onclick="Firstfunction()">click for change content</button>
+    <button onclick="Changesizefont()">click for change font size</button>
+    <button onclick="printNumber()">print number</button>
+    <button onclick="document.write(5 + 6)">click</button>
+    <button onclick="ifElse(1)">Click</button>
+    <button onclick="switchCase(1)">Click</button>
+    <button onclick="objectValue()">Click</button>
+    <button onclick="exampleFunction()">Click</button>
+
+    <script>
+        document.write(5 + 6)
+    </script>
+    <script>
+        window.alert(5 + 6)
+    </script>
+    <script>
+        console.log(5 + 6)
+    </script>
+
 </body>
 
 </html>
